[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "SPL Associated Token Account Program Tests"
edition = "2018"
license = "Apache-2.0"
name = "spl-associated-token-account-test"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.0.1"

[features]
test-bpf = []

[dev-dependencies]
solana-program = {version = "0.1.5", path = "../../../bbachain/sdk/program"}
solana-program-test = {version = "0.1.5", path = "../../../bbachain/program-test"}
solana-sdk = {version = "0.1.5", path = "../../../bbachain/sdk"}
spl-associated-token-account = { version = "1.1", path = "../program", features = ["no-entrypoint"] }
spl-token = { version = "3.5", path = "../../token/program", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.4", path = "../../token/program-2022", features = ["no-entrypoint"] }
