[package]
name = "spl-memo"
version = "3.0.1"
description = "Solana Program Library Memo"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = {version = "0.1.4", path = "../../../bbachain/sdk/program"}

[dev-dependencies]
solana-program-test = {version = "0.1.4", path = "../../../bbachain/program-test"}
solana-sdk = {version = "0.1.4", path = "../../../bbachain/sdk"}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
