[package]
name = "spl-token-metadata"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "0.9"
borsh-derive = "0.9"
solana-program = {version = "0.1.4", path = "../../../bbachain/sdk/program"}
spl-token = { version = "3.5", path = "../../token/program", features = ["no-entrypoint"] }
