[package]
name = "spl-token-metadata"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
serde-feature = ["serde", "serde_with"]
test-bpf = []

[dependencies]
borsh = "0.9"
borsh-derive = "0.9"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0.149", optional = true }
serde_with = { version = "1.14.0", optional = true }
shank = { version = "0.3.0" }
solana-program = {version = "0.1.5", path = "../../../bbachain/sdk/program"}
spl-token-metadata-context-derive = { version = "0.1.0", path = "../macro" }
spl-utils = { version = "0.1.0", path = "../utils" }
thiserror = "1.0"
