[package]
name = "spl-utils"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
arrayref = "0.3.6"
solana-program = { version = "0.1.4", path = "../../../bbachain/sdk/program" }
spl-token-2022 = { version = "0.4.2", path = "../../token/program-2022", features = [ "no-entrypoint" ], optional = true }

[features]
default = ["spl-token"]
spl-token = ["spl-token-2022"]

[profile.release]
overflow-checks = true # Enable integer overflow checks.