[package]
name = "spl-record"
version = "0.1.0"
description = "Solana Program Library Record Program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.0"
num-derive = "0.3"
num-traits = "0.2"
solana-program = {version = "0.1.5", path = "../../../bbachain/sdk/program"}
thiserror = "1.0"

[dev-dependencies]
solana-program-test = {version = "0.1.5", path = "../../../bbachain/program-test"}
solana-sdk = {version = "0.1.5", path = "../../../bbachain/sdk"}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
