[package]
name = "spl-shared-memory"
version = "2.0.6"
description = "Solana Program Library Shared-memory"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
test-bpf = []

[dependencies]
arrayref = "0.3.6"
solana-program = {version = "0.1.4", path = "../../../bbachain/sdk/program"}

[dev-dependencies]
solana-program-test = {version = "0.1.4", path = "../../../bbachain/program-test"}
solana-sdk = {version = "0.1.4", path = "../../../bbachain/sdk"}

[lib]
crate-type = ["cdylib", "lib"]
