[package]
name = "spl-token-2022"
version = "0.4.2"
description = "Solana Program Library Token 2022"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-bpf = []
serde-traits = ["serde", "serde_with"]
# Remove these features once the underlying syscalls are released on all networks
default = ["zk-ops"]
zk-ops = []

[dependencies]
arrayref = "0.3.6"
bytemuck = { version = "1.7.2", features = ["derive"] }
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
solana-program = {version = "0.1.5", path = "../../../bbachain/sdk/program"}
solana-zk-token-sdk = {version = "0.1.5", path = "../../../bbachain/zk-token-sdk"}
spl-memo = { version = "3.0.1", path = "../../memo/program", features = [ "no-entrypoint" ] }
spl-token = { version = "3.5",  path = "../program", features = ["no-entrypoint"] }
thiserror = "1.0"
serde = { version = "1.0.136", optional = true }
serde_with = { version = "1.14.0", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
proptest = "1.0"
serial_test = "0.5.1"
solana-program-test = {version = "0.1.5", path = "../../../bbachain/program-test"}
solana-sdk = {version = "0.1.5", path = "../../../bbachain/sdk"}
serde_json = "1.0.81"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
