[package]
name = "spl-token"
version = "3.5.0"
description = "Solana Program Library Token"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
bytemuck = "1.7.2"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
solana-program = {version = "0.1.5", path = "../../../bbachain/sdk/program"}
thiserror = "1.0"

[dev-dependencies]
lazy_static = "1.4.0"
proptest = "1.0"
serial_test = "0.5.1"
solana-program-test = {version = "0.1.5", path = "../../../bbachain/program-test"}
solana-sdk = {version = "0.1.5", path = "../../../bbachain/sdk"}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
